src/test/ui/async-await/issue-64130-non-send-future-diags.stderr
error[E0277]: future cannot be sent between threads safely
  --> $DIR/issue-64130-non-send-future-diags.rs:21:5
   |
LL | fn is_send<T: Send>(t: T) { }
   |    -------    ---- required by this bound in `is_send`
...
LL |     is_send(foo());
   |     ^^^^^^^ future returned by `foo` is not `Send`
   |
   = help: within `impl std::future::Future`, the trait `std::marker::Send` is not implemented for `std::sync::MutexGuard<'_, u32>`
note: future is not `Send` as this value is used across an await
  --> $DIR/issue-64130-non-send-future-diags.rs:15:5
   |
LL |     let g = x.lock().unwrap();
   |         - has type `std::sync::MutexGuard<'_, u32>`
LL |     baz().await;
   |     ^^^^^^^^^^^ await occurs here, with `g` maybe used later
LL | }
   | - `g` is later dropped here
note: future is not `Send` as this value is used across an await
  --> $DIR/issue-64130-non-send-future-diags.rs:10:5
   |
LL |     bar(&Mutex::new(22)).await;
   |     --------------------^^^^^^- `bar(&Mutex::new(22))` is later dropped here
   |     |
   |     await occurs here, with `bar(&Mutex::new(22))` maybe used later
   |     has type `impl std::future::Future`
   = note: required because it appears within the type `impl std::future::Future`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
